2004-08-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-item.h, src/sp-item.cpp: (i2anc_affine): New function
	  (essentially a rename of existing private partial_xform function, but
	  differing behaviour on encountering non-SPItem in the hierarchy).

	  (i2i_affine): New function (essentially a rename of existing
	  SPItem::getRelativeAffine).  Implement SPItem::getRelativeAffine in
	  terms of the new function.

	  (sp_item_dt2i_affine): NR::Matrix version.

	* src/libnr/nr-path.h (c, setC): new methods.

2004-08-09  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/desktop-affine.cpp (sp_desktop_w2doc_affine,
	sp_desktop_doc2w_affine, sp_desktop_doc2d_xy_point),
	src/knotholder.cpp (knot_moved_handler), src/sp-item.cpp
	(SPItem::getRelativeTransform), src/sp-rect.cpp
	(sp_rect_set_transform), src/display/sp-canvas-util.cpp
	(sp_canvas_item_i2i_affine, sp_canvas_item_set_i2w_affine):
	  Cleanup: Use the new division operators instead of multiplication by
	  inverse.  (Currently the division operators are implemented as
	  multiplication by inverse.)

	* src/splivarot.cpp, src/livarot/Shape.cpp, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp:
	  Hurriedly fix some problems caused by overly-hurried changes.
	  Address some signed/unsigned warnings.
	  Add some assertions.
	  (Haven't checked the performance cost of the assertions.)

	* src/livarot/Shape.h: Make constructors explicit.

2004-08-08  MenTaLguY  <mental@rydia.net>

	* src/sp-flowregion.cpp, src/sp-flowtext.cpp, src/sp-offset.cpp,
	  src/splivarot.cpp, src/display/nr-arena-shape.cpp,
	  src/livarot/PathConversion.cpp, src/livarot/Shape.cpp,
	  src/livarot/Shape.h, src/livarot/ShapeDraw.cpp,
	  src/livarot/ShapeMisc.cpp, src/livarot/ShapeRaster.cpp,
	  src/livarot/ShapeSweep.cpp, src/livarot/ShapeSweepUtils.cpp:

	  replace ad-hoc realloced arrays with std::vector and deal with
	  uninitialized data problems that valgrind complained about
